--- a/src/ex/ex2/index.html
+++ b/src/ex/ex2/index.html
@@ -8,8 +8,14 @@
 </head>
 <body>
     
+    <h1>¿Cuánto es la suma de 3 + 5?</h1>
+    <form id="sumaForm">
+        <button type="submit">resultado</button>
+    </form>
+
+    <p id="resultado"></p>
 
 
-    <script src="./app.js"></script>
+    <script src="../ex2/app.js"></script>
 </body>
 </html>
